<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SplashActivity">

    <TextView
        android:id="@+id/tvTitel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Title"
        android:text="@string/app_name"/>


    <TextView
        android:id="@+id/tvHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/paddingLarge"
        android:layout_marginRight="@dimen/paddingLarge"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/SubTitle"
        android:text="@string/hint"/>

    <Button
        android:id="@+id/btnAgree"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/paddingLarge"
        android:layout_marginRight="@dimen/paddingLarge"
        android:layout_marginBottom="@dimen/paddingLarge"
        android:text="@string/agree"
        style="@style/Button"/>


    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="234dp"
        android:layout_height="368dp"
        android:layout_gravity="center"
        android:src="@drawable/gps" />


</FrameLayout>
